kconfig.yml
apiVersion: apps/v1beta1
kind: Deployment
metadata:
  name: aks-example-octozen
spec:
  replicas: 1
  strategy:
    rollingUpdate:
      maxSurge: 1
      maxUnavailable: 1
  minReadySeconds: 5 
  template:
    metadata:
      labels:
        app: aks-example-octozen
    spec:
      containers:
      - name: aks-example-octozen
        # Replace $ACR_LOGIN_SERVER with your ACR login server name from:
        # az acr list --resource-group $RESOURCE_GROUP --query "[].{acrLoginServer:loginServer}" --output table
        image: $ACR_LOGIN_SERVER/aks-example-octozen:v1
        ports:
        - containerPort: 80
        resources:
          requests:
            cpu: 250m
          limits:
            cpu: 500m
---
apiVersion: v1
kind: Service
metadata:
  name: aks-example-octozen
spec:
  type: LoadBalancer
  ports:
  - port: 80
  selector:
    app: aks-example-octozen
